--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,5 +1,11 @@
 pipeline {
-    agent any
+    agent {
+            kubernetes {
+                cloud 'kubernetes'
+                inheritFrom 'python'
+            }
+        }
+
 
     stages {
         stage('Build') {
