--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,6 +1,6 @@
 pipeline {
     agent {
-            kubernetes {
+            any {
                 cloud 'eks'
                 inheritFrom 'python'
             }
