adding variable image tag

--- a/yamls/deploy.yaml
+++ b/yamls/deploy.yaml
@@ -15,6 +15,6 @@ spec:
     spec:
       containers:
       - name: python
-        image: docker.io/samahalisaber/python-task:v1.2
+        image: docker.io/samahalisaber/python-task:@BUILD_NUMBER@
         ports:
         - containerPort: 8080
